Comments from V1 implemented

--- a/EXO-12-055/EXO-12-055.bib
+++ b/EXO-12-055/EXO-12-055.bib
@@ -566,6 +566,54 @@ language={English}
       reportNumber   = "CERN-PH-EP-2014-299",
       SLACcitation   = "%%CITATION = ARXIV:1502.01518;%%"
 }
+}
+@article{Khachatryan:2015oqa,
+      author         = "Khachatryan, Vardan and others",
+      title          = "{Measurement of the differential cross section for top
+                        quark pair production in pp collisions at $\sqrt{s} =
+                        8\,\text {TeV} $}",
+      collaboration  = "CMS",
+      journal        = "Eur. Phys. J.",
+      volume         = "C75",
+      year           = "2015",
+      number         = "11",
+      pages          = "542",
+      doi            = "10.1140/epjc/s10052-015-3709-x",
+      eprint         = "1505.04480",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-TOP-12-028, CERN-PH-EP-2015-117",
+      SLACcitation   = "%%CITATION = ARXIV:1505.04480;%%"
+}
+@article{Khachatryan:2015sga,
+      author         = "Khachatryan, Vardan and others",
+      title          = "{Measurement of the $W^+W^-$ cross section in pp
+                        collisions at $\sqrt{s}$ = 8 TeV and limits on anomalous
+                        gauge couplings}",
+      collaboration  = "CMS",
+      year           = "2015",
+      eprint         = "1507.03268",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-SMP-14-016, CERN-PH-EP-2015-122",
+      SLACcitation   = "%%CITATION = ARXIV:1507.03268;%%"
+}
+
+@article{Sjostrand:2006za,
+      author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
+                        Z.",
+      title          = "{PYTHIA 6.4 Physics and Manual}",
+      journal        = "JHEP",
+      volume         = "05",
+      year           = "2006",
+      pages          = "026",
+      doi            = "10.1088/1126-6708/2006/05/026",
+      eprint         = "hep-ph/0603175",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-06-052-CD-T, LU-TP-06-13",
+      SLACcitation   = "%%CITATION = HEP-PH/0603175;%%"
+}
 @article{photon_purity,
       author         = "Khachatryan, Vardan and others",
       title          = "{Performance of photon reconstruction and identification
@@ -629,6 +677,7 @@ language={English}
       reportNumber   = "UCI-TR-2011-03, UH511-1157-2011",
       SLACcitation   = "%%CITATION = ARXIV:1102.4331;%%"
 }
+}
 @ARTICLE{simplified1,
      author = "{Busoni, G. {\em et al.}}",
      title     = "{On the Validity of the Effective Field Theory for Dark Matter Searches at the LHC}",
@@ -683,6 +732,7 @@ language={English}
       primaryClass   = "hep-ph",
       reportNumber   = "IPPP-15-19, DCPT-15-38",
       SLACcitation   = "%%CITATION = ARXIV:1505.03019;%%"
+}
 }
 @article{Hambye:2013sna,
       author         = "Hambye, Thomas and Strumia, Alessandro",
