--- a/EXO-12-055/ModelInterpretation.tex
+++ b/EXO-12-055/ModelInterpretation.tex
@@ -1,5 +1,5 @@
 \section{Signal Hypotheses}
-The signal hypotheses targetted in this search are provided under a set of simplified mediator models. These models assume an additional particle, 
+The signal hypotheses targeted in this search are provided under a set of simplified mediator models. These models assume an additional particle, 
 a fermionic dark matter candidate, and an additional interaction that forces the production of a Dark Matter. 
 It is assumed that this additional interaction is mediated by a generic spin-0 or spin-1 particle. 
 The interactions are characterised by four distinct Lagrangians,
@@ -54,11 +54,11 @@ quark mass is taken into account.
 \begin{figure}[htbp]
   \centering
   \subfloat[][]{
-        \includegraphics[angle=0,width=0.36\textwidth]{figures/scalarbox.png}
+        \includegraphics[angle=0,width=0.36\textwidth]{figures/scalarbox.pdf}
         \label{fig:monojet0}
   }
   \subfloat[][]{
-        \includegraphics[angle=0,width=0.36\textwidth]{figures/scalarV.png}
+        \includegraphics[angle=0,width=0.36\textwidth]{figures/scalarV.pdf}
         \label{fig:monoV0}
   }
   \caption{Diagrams for production of the monojet (a) and mono-V signature through Higgs-strahlung (b), through a scalar mediator.\label{fig:monoXfeyn}}
