--- a/EXO-12-055/selection.tex
+++ b/EXO-12-055/selection.tex
@@ -1,6 +1,6 @@
 \section{Event Selection and Categorization}\label{sec:selection}
 
-Candiate signal events are selected on the basis of large values of \ETm and one or more high-\pt jets, 
+Candidate signal events are selected on the basis of large values of \ETm and one or more high-\pt jets, 
 explicitly vetoing isolated leptons and photons. Events are
 reconstructed with the CMS detector, following the standard CMS reconstruction~\cite{CMSdetector}. 
 
@@ -62,7 +62,7 @@ imperfect knowledge of the parton shower and detector modelling. This disagreeme
    and $m_{\mathrm{prune}}$ (b) for events in data and MC in the boosted event category. 
  A cut of $\tau_2/\tau_1<$0.5 has been applied in figure b. The
  disagreement present in the observables is covered by additional
- systematic uncerainties not showin this plot.}
+ systematic uncertainties which are not shown here.}
  \label{fig:boostvtagvars}\end{center}\end{figure*}
 
 In cases where the electroweak boson has insufficient transverse momentum for its hadronic
