--- a/EXO-12-055/summary.tex
+++ b/EXO-12-055/summary.tex
@@ -3,9 +3,12 @@ A search has been presented for an excess of events with a high energy jet
 in association with a large missing transverse momentum in a data sample of 
 proton-proton interactions at centre-of-mass energy of 8 TeV. The data 
 correspond to an integrated luminosity of 19.7\fbinv collected by the CMS 
-detector at the LHC. Sensitivity to mono-V models is achieved by tagging events 
-consistent with the jet originating from a hadronically decaying vector boson. 
-No significant deviation from the expectation from SM backgrounds is observed in the \ETm 
-distributions.  
-The search is interpreted in terms of DM production to place 
-constraints on the parameter space of the simplified models considered. 
+detector at the LHC. 
+This search is the first at CMS to utilise sub-structure techniques in order to identify hadronically decaying vector 
+bosons in both boosted and resolved scenarios. The sensitivity to a mono-V signature is enhanced by categorising the events 
+according to the origin of the jets in the event as either quark/gluon radiation or from a hadronically decaying vector boson through these techniques.
+The sensitivity is further increased by using the full shape of the $\ETm$ distribution to discriminate signal from standard model backgrounds. 
+No significant deviation from the expectation from SM backgrounds is observed in the \ETm distributions.  
+The results of the search are interpreted under a set of simplified models which describe the production of DM via vector, axial-vector, scalar or pseudoscalar mediation and 
+constraints on the parameter space of these simplified models are produced. The search is the first at CMS to be interpreted under these simplified models for 
+DM production. 
